--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/DoniyorTuychiev/git_token#readme",
   "dependencies": {
+    "moment": "^2.29.4",
     "nodemon": "^3.0.1"
   }
 }
