--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "dev": "nodemon server.js",
+    "train": "nodemon train.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +21,8 @@
   },
   "homepage": "https://github.com/DoniyorTuychiev/git_token#readme",
   "dependencies": {
+    "main": "server.js",
+    "express": "^4.18.2",
     "moment": "^2.29.4",
     "nodemon": "^3.0.1"
   }
