--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/DoniyorTuychiev/git_token#readme",
   "dependencies": {
+    "axios": "^1.5.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "moment": "^2.29.4",
